[update] index.jsp [update] commandMapping.properties

--- a/ClothsMall/src/main/webapp/property/commandMapping.properties
+++ b/ClothsMall/src/main/webapp/property/commandMapping.properties
@@ -20,13 +20,11 @@
 /mg/qnaReplyPro.do=clothshop.command.QnaReplyProAction
 /mg/qnaReplyUpdateForm.do=clothshop.command.QnaReplyUpdateFormAction
 /mg/qnaReplyUpdatePro.do=clothshop.command.QnaReplyUpdateProAction
-
 ##admin area - manage member
-/mg/clothList.do=clothshop.command.ClothListAction
-/mg/clothUpdateForm.do=clothshop.command.ClothUpdateFormAction
-/mg/clothUpdatePro.do=clothshop.command.ClothUpdateProAction
-/mg/clothDeletePro.do=clothshop.command.ClothDeleteProAction
-
+/mg/memberList.do=clothshop.command.MemberListAction
+/mg/memberUpdateForm.do=clothshop.command.MemberUpdateFormAction
+/mg/memberUpdatePro.do=clothshop.command.MemberUpdateProAction
+/mg/memberDeletePro.do=clothshop.command.MemberDeleteProAction
 #user area
 ##user area - process member
 /registerForm.do=clothshop.command.RegisterFormAction
