[update] update qna [style] update style qna

--- a/ClothsMall/src/main/webapp/property/commandMapping.properties
+++ b/ClothsMall/src/main/webapp/property/commandMapping.properties
@@ -20,10 +20,9 @@
 /mg/qnaReplyPro.do=clothshop.command.QnaReplyProAction
 /mg/qnaReplyUpdateForm.do=clothshop.command.QnaReplyUpdateFormAction
 /mg/qnaReplyUpdatePro.do=clothshop.command.QnaReplyUpdateProAction
+/mg/qnaReplyDeletePro.do=clothshop.command.QnaReplyDeleteProAction
 ##admin area - manage member
 /mg/memberList.do=clothshop.command.MemberListAction
-/mg/memberUpdateForm.do=clothshop.command.MemberUpdateFormAction
-/mg/memberUpdatePro.do=clothshop.command.MemberUpdateProAction
 /mg/memberDeletePro.do=clothshop.command.MemberDeleteProAction
 #user area
 ##user area - process member
